apps/nextcloud/middleware-default-nextcloud-webdav-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-webdav-redirect
  namespace: default
spec:
  redirectRegex:
    permanent: true
    regex: https://(.*)/.well-known/(?:card|cal)dav
    replacement: https://$1/remote.php/dav
