apps/nextcloud/service-default-nextcloud.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud
    component: nextcloud
  name: nextcloud
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nextcloud
    component: nextcloud
  sessionAffinity: None
  type: ClusterIP
