apps/nextcloud/ingressroute-default-nextcloud.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: nextcloud
  name: nextcloud
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`cloud.brmartin.co.uk`)
    middlewares:
    - name: nextcloud-webdav-redirect
      namespace: default
    services:
    - name: nextcloud
      port: 80
  tls:
    secretName: wildcard-brmartin-tls
